crates/ui/tests/it/snapshots/it__save__load_slots.snap
---
source: crates/ui/tests/save.rs
expression: h.snapshot()
---
                                                                                                    
  ┌─ Load Game ──────────────────────────────────────────────────────────────────────────────────┐  
  │                                                                                              │  
  │  Slot  Chapter                                           Mode      Army                Time  │  
  │                                                                                              │  
  │  01    Quick Battle                                      Classic   2 units          0:00:05  │  
  │  02    Empty                                                                                 │  
  │  03    Empty                                                                                 │  
  │  04    Empty                                                                                 │  
  │  05    Empty                                                                                 │  
  │  06    Empty                                                                                 │  
  │  07    Empty                                                                                 │  
  │  08    Empty                                                                                 │  
  │  09    Empty                                                                                 │  
  │  10    Empty                                                                                 │  
  │  11    Empty                                                                                 │  
  │  12    Empty                                                                                 │  
  │  13    Empty                                                                                 │  
  │  14    Empty                                                                                 │  
  │  15    Empty                                                                                 │  
  │  16    Empty                                                                                 │  
  │  17    Empty                                                                                 │  
  │  18    Empty                                                                                 │  
  │  19    Empty                                                                                 │  
  │  20    Empty                                                                                 │  
  │                                                                                              │  
  └───────────────────────────────────────────────────────────────────────────────── 1-20 of 30 ─┘  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                  arrows choose · f load · d back                                   
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aabbcccccccccccbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddeeeeddeeeeeeedddddddddddddddddddddddddddddddddddddddddddeeeeddddddeeeeddddddddddddddddeeeeddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbeeeeeeeeeeeebbaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaagggggggggggggggggggggggggggggggaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text_highlight bg:panel_bg
d = fg:text bg:panel_bg
e = fg:text_dim bg:panel_bg
f = fg:panel_bg bg:panel_border_focus
g = fg:text_dim bg:black
